syntax = "proto3";

package pb;
option go_package = "./pb";

//import "google/protobuf/empty.proto";
//import public "google/protobuf/empty.proto";
service UserService {
    rpc SaveUser(SaveUserRequest) returns (SaveUserResponse) {};
    rpc FindUserByEmail(FindUserByEmailRequest) returns (FindUserByEmailResponse) {};
    //rpc UpdateUserVerified(UpdateUserVerifyRequest) returns(google.protobuf.Empty){};
    rpc FindUserByPhone(FindUserByPhoneRequest) returns (FindUserByPhoneResponse){};
}

message SaveUserRequest {
    string first_name = 1;
    string middle_name=2;
    string last_name = 3;
    uint64 age = 4;
    string gender =5;
    string email = 6;
    string phone  = 7;
    string account =8;
    string user_name = 9;
    string password = 10;
}

message SaveUserResponse{
    uint64 user_id = 1;
}

message FindUserByEmailRequest {
    string email = 1;
}

message FindUserByEmailResponse {
    uint64 user_id = 1;
    string first_name = 2;
    string last_name = 3;
    uint64 age = 4;
    string email = 5;
    string phone = 6;
    string password = 7;
    bool verified = 8;
    bool block_status = 9;
}

// update user verify
message UpdateUserVerifyRequest {
    uint64 user_id = 1;
}

// find user by phone
message FindUserByPhoneRequest {
    string phone = 1;
}
message FindUserByPhoneResponse {
    uint64 user_id = 1;
    string first_name = 2;
    string last_name = 3;
    uint64 age = 4;
    string email = 5;
    string phone = 6;
    string password = 7;
    bool verified = 8;
    bool block_status = 9;
}